<resources>
    <string name="app_name">Todos</string>

    <string name="action_settings">Settings</string>
    <string name="new_todo">New Todo</string>
    <string name="edit_todo">Edit Todo</string>
    <string name="title">Title:</string>
    <string name="contents">Contents</string>
    <string name="save">Save</string>
    <string name="text">Text:</string>
    <string name="title_hint">Title</string>
    <string name="filter">Filter</string>
    <string name="sync_intent_filter">TODOS_INTENT_FILTER</string>

    <!--delete dialog strings-->
    <string name="delete_dialog_title">Delete</string>
    <string name="delete_dialog_message">Are you sure?</string>
    <string name="delete_dialog_confirm">Yes</string>
    <string name="delete_dialog_cancel">Cancel</string>
    <string name="all_checkbox_text">All</string>
    <string name="active_checkbox_text">Active</string>
    <string name="completed_checkbox_text">Completed</string>
    <string name="newtodo_iscompleted_text">Completed</string>
    <string name="newtodo_uploadimage">Upload Image</string>
</resources>
