<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_todo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.towson.cosc435.choi.todos.NewTodoActivity">

    <TextView
        android:id="@+id/new_todo_activity_title"
        android:text="@string/new_todo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="24sp"
        android:paddingBottom="24dp" />

    <TextView
        android:text="@string/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView2" />

    <EditText
        android:id="@+id/title_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:transitionName="title"
        android:hint="@string/title_hint"
        android:inputType="textCapWords"
        android:textStyle="bold" />

    <TextView
        android:text="@string/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView3" />

    <EditText
        android:id="@+id/text_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="top"
        android:hint="@string/contents"
        android:transitionName="contents"
        android:inputType="textCapSentences|textMultiLine|textWebEditText"
        android:lines="5"
        android:minLines="5" />

    <CheckBox
        android:text="@string/newtodo_iscompleted_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:transitionName="checkbox"
        android:id="@+id/newtodo_completed_checkbox" />

    <Button
        android:text="@string/newtodo_uploadimage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/newtodo_uploadimage" />

    <Button
        android:text="@string/save"
        style="@style/Widget.AppCompat.Button.Colored"
        android:textColor="@android:color/white"
        android:id="@+id/save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />
</LinearLayout>
